<resources>
    <string name="app_name">GPSCameraApp</string>
    <string name="title_activity_gpscamera_app">GPSCameraApp</string>
    <string name="str_address_hints">Address</string>

    <!--Menu Dialog List-->
    <string name="menu_add_media">Add Media</string>
    <string name="menu_change_language">Change Language</string>
    <string name="menu_import_kml">Import KML</string>
    <string name="menu_export_kml">Export KML</string>
    <string name="menu_account_info">Account Info</string>
    <string name="menu_location_history">Location History</string>
    <string name="menu_setup_map_view">Setup Map View</string>

    <!--Language Dialog List-->
    <string name="language_title">Please choose language</string>
    <string name="language_english">English</string>
    <string name="language_japanese">日本語</string>
    <string name="language_cancel">Cancel</string>
    <string name="title_activity_add_media">AddMedia</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="str_add_media">Add Media</string>
    <string name="str_title">Title</string>
    <string name="str_media">Media</string>
    <string name="str_position">Position</string>
    <string name="str_comment">Comment</string>
    <string name="title_activity_maps_choose_place">MapsChoosePlace</string>
    <string name="title_activity_account_info">AccountInfo</string>

    <!--Account Information-->
    <string name="label_account_info_title">Account Info</string>
    <string name="label_name">Name</string>
    <string name="label_birth_date">Birthday</string>
    <string name="label_sex">Sex</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_account_name">Account</string>
    <string name="label_account_password">Password</string>
</resources>
