<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mnAddMedia"
        android:orderInCategory="0"
        android:title="@string/menu_add_media">
    </item>
    <item
        android:id="@+id/mnChangeLanguage"
        android:orderInCategory="1"
        android:title="@string/menu_change_language">
    </item>
    <item
        android:id="@+id/mnImportKML"
        android:orderInCategory="2"
        android:title="@string/menu_import_kml">
    </item>
    <item
        android:id="@+id/mnExportKML"
        android:orderInCategory="3"
        android:title="@string/menu_export_kml">
    </item>
    <item
        android:id="@+id/mnAccountInfo"
        android:orderInCategory="4"
        android:title="@string/menu_account_info">
    </item>
    <item
        android:id="@+id/mnLocationHistory"
        android:orderInCategory="5"
        android:title="@string/menu_location_history">
    </item>
    <item
        android:id="@+id/mnSetupMapView"
        android:orderInCategory="6"
        android:title="@string/menu_setup_map_view">
    </item>
</menu>