<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30px"
        android:paddingRight="30px"
        android:stretchColumns="1">

        <TableRow
            android:layout_gravity="center"
            android:layout_marginRight="30px"
            android:gravity="center"
            android:paddingLeft="30px"
            android:paddingTop="30px"

            android:textColor="#4279bd">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:gravity="center"
                android:text="@string/label_account_info_title"
                android:textColor="#0033FF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginTop="30px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:paddingLeft="30px"
                android:paddingRight="30px"
                android:text="@string/label_name"
                android:textColor="@color/color_label"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="140px"
                android:layout_span="2"
                android:background="@drawable/edit_text_style"
                android:inputType="text"
                android:paddingLeft="50px"
                android:paddingRight="30px"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_marginRight="30px"
            android:layout_marginTop="30px"
            android:paddingLeft="30px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/label_birth_date"
                android:textColor="#4279bd"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="140px"
                android:layout_span="1"
                android:background="@drawable/edit_text_style"
                android:inputType="text"
                android:paddingLeft="30px"
                android:paddingRight="30px"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btnChooseDate"
                android:layout_width="140px"
                android:layout_height="140px"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/img_btn_choose_date" />
        </TableRow>

        <TableRow
            android:layout_marginRight="30px"
            android:layout_marginTop="30px"
            android:paddingLeft="30px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/label_sex"
                android:textColor="#4279bd"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_span="2"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:text="@string/label_male"
                    android:textColor="#4279bd"
                    android:textSize="18sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150px"
                    android:text="@string/label_female"
                    android:textColor="#4279bd"
                    android:textSize="18sp" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_marginRight="30px"
            android:layout_marginTop="30px"
            android:paddingLeft="30px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/label_account_name"
                android:textColor="#4279bd"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="140px"
                android:layout_span="2"
                android:background="@drawable/edit_text_style"
                android:inputType="text"
                android:paddingLeft="30px"
                android:paddingRight="30px"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_marginRight="30px"
            android:layout_marginTop="30px"
            android:paddingLeft="30px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/label_account_password"
                android:textColor="#4279bd"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="140px"
                android:layout_span="2"
                android:background="@drawable/edit_text_style"
                android:inputType="text"
                android:paddingLeft="30px"
                android:paddingRight="30px"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnChange"
            android:layout_width="200px"
            android:layout_height="200px"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/img_btn_change" />

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginLeft="100px"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/img_btn_close" />
    </RelativeLayout>
</LinearLayout>